--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/firebase-adapter": "^1.0.14",
+    "@auth/core": "^0.24.0",
+    "@auth/firebase-adapter": "^1.1.0",
     "@heroicons/react": "^2.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "firebase": "^10.7.2",
+    "firebase": "^10.5.0",
     "firebase-admin": "^11.11.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^14.14.0",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
